# cool-opengl-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
resources/shaders/: cool.frag  light.frag  light.vert  triangle.frag  triangle.vert
scripts/: build.bat  configure.bat  run.bat
src/: camera.cpp  camera.h  index_buffer.cpp  index_buffer.h  main.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  transform.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h  wavefront.cpp  wavefront.h  window.cpp  window.h  window_data.cpp  window_data.h  window_props.cpp  window_props.h
